# tokenizer-benchmarking

./: .gitignore  README.md  pyproject.toml  requirements.txt
.matplotlib/: fontlist-v3.11.0.json
data/: manifest.real.json
data/code/: 0001_microsoft-typescript-src-compiler-parser-ts.py  0002_pallets-flask-src-flask-app-py.py  0003_eslint-eslint-lib-linter-linter-js.py  0004_psf-requests-src-requests-sessions-py.py  0005_vercel-next-js-packages-next-src-server-base-server-ts.py  0006_tiangolo-fastapi-fastapi-routing-py.py  0007_facebook-react-packages-react-src-reacthooks-js.py  code_004.py  code_005.py  code_015.py  code_046.py
data/english/: english_014.txt  english_015.txt  english_025.txt  english_060.txt
data/technical/: 0001_your-privacy-my-cloak-backdoor-attacks-on-differentially-private-federated-learning.md  0002_filtered-conformal-ellipsoids-for-graph-native-time-series.md  0003_the-value-axis-language-models-encode-whether-they-re-on-the-right-track.md  0004_tokenpilot-cache-efficient-context-management-for-llm-agents.md  0005_context-aware-rl-for-agentic-and-multimodal-llms.md  technical_016.md  (+6 more)
fastbpe/: __init__.py
paper/: README.md  equations_notes.md  fastbpe_paper.tex  manuscript_draft.md  outline.md  project_journal.md  results_summary.md
results/: batch_results.csv  benchmark_raw.csv  benchmark_summary.csv  environment.json  length_scaling.csv  memory_results.csv
scripts/: fetch_real_datasets.py  generate_latex_paper.py  generate_pdf_paper.py  generate_report.py  prepare_datasets.py  run_all_benchmarks.py  run_exactness_tests.py
(+22 files in other folders)
